fader updates to js, html and css

--- a/fader/fader.html
+++ b/fader/fader.html
@@ -7,6 +7,10 @@
 	<title>Fader</title>
 </head>
 <body>
+<header>
+	<h1>proof of concept: fader</h1>
+	<p>click the nav links for transition the slides.</br>HTML5/Compass/Sass/CSS3 with media queries for phone and tablet.</p>
+</header>
 <div id="wrap">
 	<div id="slides">
 		<section class="slide1 active">
