fader updates to js, html and css

--- a/fader/fader.html
+++ b/fader/fader.html
@@ -1,6 +1,13 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 <head>
+<!--[if IE]>
+	<script type="text/javascript">
+		document.createElement('header');
+		document.createElement('section');
+		document.createElement('nav');
+	</script>
+<![endif]-->
 	<link href="css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=320, initial-scale=1, maximum-scale=1">
