revisions to fader

--- a/fader/fader.html
+++ b/fader/fader.html
@@ -20,7 +20,7 @@
 </header>
 <div id="wrap">
 	<div id="slides">
-		<section class="slide1 active">
+		<section class="slide1 active" style="opacity : 1">
 			<h2>Slide 1</h2>
 			<p>Master cleanse pinterest swag tofu street art, selvage thundercats squid tumblr iphone 8-bit direct trade. Bushwick hella organic bicycle rights, fap viral whatever pop-up single-origin coffee food truck DIY echo park post-ironic. Mumblecore bushwick pinterest, vinyl artisan before they sold out ennui master cleanse cosby sweater sustainable +1 scenester art party.</p>
 		</section>
