updated css link

--- a/colorblocks/demo.html
+++ b/colorblocks/demo.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>pubsub</title>
-	<link type="text/stylesheet" rel="stylesheet" href="style.css" />
+	<link type="text/css" rel="stylesheet" href="style.css" />
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script type="text/javascript" src="js/ejs_production.js"></script>
 	<script type="text/javascript" src="js/demo.js"></script>
