--- a/colorblocks/demo.html
+++ b/colorblocks/demo.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>pubsub</title>
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,700' rel='stylesheet' type='text/css'>
 	<link type="text/css" rel="stylesheet" href="style.css" />
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script type="text/javascript" src="js/ejs_production.js"></script>
 	<script type="text/javascript" src="js/demo.js"></script>
 </head> 
